@@ -46,6 +46,7 @@ Container/Image/SCM/Signature
 - CONTAINER_OCI_LAYOUT
 - CONTAINER_TARBALL_SCAN
 - CONTAINER_SBOM_PRESENT
+- CONTAINER_SBOM_INVALID
 - IMAGE_ADAPTER_V1
 - IMAGE_TABLE_TRUNCATED
 - IMAGE_FORMAT_MISMATCH
